hphp/test/slow/unsafe_cast_array.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/unsafe_cast_array.php on line 12